--- a/index.html
+++ b/index.html
@@ -5,129 +5,25 @@
 <title>Kotelna – Attack FD 25</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
 *{box-sizing:border-box;margin:0;padding:0;font-family:Segoe UI,system-ui;}
-body{
-  background: linear-gradient(135deg,#1e3c72,#2a5298);
-  color:#222;
-}
-header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  background:#0d1a40;
-  color:#fff;
-  padding:15px 30px;
-  box-shadow:0 4px 12px rgba(0,0,0,.4);
-  border-bottom-left-radius:10px;
-  border-bottom-right-radius:10px;
-}
-header div{font-weight:600;}
-#fsBtn{
-  background:#ff9800;
-  border:none;
-  color:#fff;
-  font-size:18px;
-  padding:8px 14px;
-  border-radius:8px;
-  cursor:pointer;
-  transition:0.2s;
-}
-#fsBtn:hover{background:#e68900;}
-
-main{max-width:1400px;margin:30px auto;padding:0 20px;}
-
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:20px;
-}
-
-.card{
-  background:linear-gradient(145deg,#fff,#e0e0e0);
-  border-radius:16px;
-  padding:20px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.25);
-  transition: transform 0.2s, box-shadow 0.2s;
-}
-.card:hover{
-  transform: translateY(-5px);
-  box-shadow: 0 15px 30px rgba(0,0,0,0.35);
-}
-
-h2{
-  margin-bottom:12px;
-  font-size:16px;
-  color:#1e3c72;
-}
-
-.value{
-  font-size:32px;
-  font-weight:700;
-  color:#d32f2f;
-}
-
-.sub{font-size:13px;color:#555;margin-bottom:4px;}
-.green{color:#2e7d32;}
-.blue{color:#1565c0;}
-.orange{color:#ef6c00;}
-
-input{
-  width:100%;
-  padding:10px;
-  font-size:15px;
-  border-radius:8px;
-  border:1px solid #ccc;
-  transition:0.2s;
-}
-input:focus{
-  border-color:#1e3c72;
-  outline:none;
-}
-
-.settings{display:grid;grid-template-columns:1fr 1fr;gap:15px;margin-top:10px;}
-button{
-  padding:12px 18px;
-  font-size:15px;
-  border-radius:10px;
-  border:none;
-  background:#1e3c72;
-  color:#fff;
-  cursor:pointer;
-  transition:0.2s;
-}
-button:hover{background:#16305c;}
-
-table{
-  width:100%;
-  border-collapse:collapse;
-  margin-top:10px;
-}
-th,td{
-  padding:10px;
-  text-align:center;
-  border-bottom:1px solid #ccc;
-}
-th{
-  background:#f0f0f0;
-}
-
-#footerLogo{
-  text-align:center;
-  margin:40px 0 20px 0;
-}
-#footerLogo img{
-  max-width:400px;
-  width:50%;
-  height:auto;
-}
-
-:fullscreen .value{
-  font-size:42px;
-}
+body{background:linear-gradient(135deg,#1e3c72,#2a5298);color:#222}
+header{display:flex;justify-content:space-between;align-items:center;background:#0d1a40;color:#fff;padding:15px 30px;box-shadow:0 4px 12px rgba(0,0,0,.4)}
+#fsBtn{background:#ff9800;border:none;color:#fff;font-size:18px;padding:8px 14px;border-radius:8px;cursor:pointer}
+main{max-width:1400px;margin:30px auto;padding:0 20px}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:20px}
+.card{background:linear-gradient(145deg,#fff,#e6e6e6);border-radius:18px;padding:22px;box-shadow:0 12px 28px rgba(0,0,0,.3)}
+h2{font-size:16px;color:#1e3c72;margin-bottom:10px}
+.value{font-size:34px;font-weight:800}
+.sub{font-size:13px;color:#555}
+.blue{color:#1565c0}
+.green{color:#2e7d32}
+.orange{color:#ef6c00}
+button{margin-top:12px;padding:12px;border-radius:12px;border:none;background:#1e3c72;color:#fff;font-size:15px;cursor:pointer}
+#footerLogo{text-align:center;margin:40px 0 20px}
+#footerLogo img{max-width:400px;width:50%}
 </style>
 </head>
 
@@ -135,8 +31,8 @@ th{
 
 <header>
   <div id="clock"></div>
-  <div>Attack FD 25 AUTOMAT– PANEL KOTELNY</div>
-  <button id="fsBtn" title="Fullscreen">⛶</button>
+  <div>Attack FD 25 – PANEL KOTELNY</div>
+  <button id="fsBtn">⛶</button>
 </header>
 
 <main>
@@ -144,20 +40,23 @@ th{
 <div class="grid">
   <div class="card"><h2>🔥 Kotel</h2><div class="value" id="tKotel">--</div></div>
   <div class="card"><h2>↩️ Zpátečka</h2><div class="value blue" id="tZpet">--</div></div>
-  <div class="card"><h2>🌡️ Teplotní spád ΔT</h2><div class="value orange" id="deltaT">--</div></div>
-  <div class="card"><h2>⚡ Výkon kotle (1 h)</h2><div class="value green" id="powerKWbig">--</div></div>
+  <div class="card"><h2>🌡️ ΔT</h2><div class="value orange" id="deltaT">--</div></div>
+  <div class="card"><h2>⚡ Výkon (1 h)</h2><div class="value green" id="powerKWbig">--</div></div>
   <div class="card"><h2>⚙️ Podavač</h2><div class="value" id="tPodavac">--</div></div>
   <div class="card"><h2>💧 Bojler</h2><div class="value" id="tBojler">--</div></div>
   <div class="card"><h2>🌡️ Venku</h2><div class="value" id="tVenku">--</div></div>
-  <div class="card"><h2>⏱️ Podavač celkem h</h2><div class="value" id="feedTotal">--</div></div>
+  <div class="card"><h2>⏱️ Podavač celkem</h2><div class="value" id="feedTotal">--</div></div>
 </div>
+
+<br>
+
 <div class="card">
-  <h2>📦 Celkem od začátku</h2>
+  <h2>📦 Celková spotřeba od začátku</h2>
+  <div class="sub">Uhlí</div>
   <div class="value blue" id="kgTotalAll">0 kg</div>
-  <div class="sub">Cena celkem</div>
+  <div class="sub">Cena</div>
   <div class="value green" id="costTotalAll">0 Kč</div>
-  <br>
-  <button id="resetTotalAllBtn">♻️ Vynulovat</button>
+  <button id="resetTotalAllBtn">♻️ Vynulovat celkem</button>
 </div>
 
 <br>
@@ -165,258 +64,47 @@ th{
 <div class="card">
 <h2>💰 Spotřeba uhlí</h2>
 <div class="grid">
-  <div><div class="sub">🔥HODINOVÁ SPOTŘEBA</div><div class="value orange" id="kgHour">0 kg</div></div>
-  <div><div class="sub">🔥DNES PROTOPENO</div><div class="value green" id="kgDay">0 kg</div></div>
-  <div><div class="sub">🔥ZA MĚSÍC</div><div class="value blue" id="kgMonth">0 kg</div></div>
-  <div><div class="sub">💰DNES PROTOPENO</div><div class="value" id="costDay">0 Kč</div></div>
-  <div><div class="sub">💰ZA MĚSÍC PROTOPENO</div><div class="value" id="costMonth">0 Kč</div></div>
-</div>
-<br>
-<button id="historyBtn">📅 Denní historie spotřeby</button>
-<button id="monthHistoryBtn">📆 Měsíční historie spotřeby</button>
-</div>
-
-<div id="historyBox" class="card" style="display:none;margin-top:20px">
-  <h2>📊 Denní historie – uhlí & cena</h2>
-  <canvas id="dayChart" style="max-height:300px;"></canvas>
-  <table>
-    <thead>
-      <tr>
-        <th>Datum</th>
-        <th>Spotřeba (kg)</th>
-        <th>Cena (Kč)</th>
-      </tr>
-    </thead>
-    <tbody id="historyTable"></tbody>
-  </table>
-</div>
-
-<div id="monthHistoryBox" class="card" style="display:none;margin-top:20px">
-  <h2>📊 Měsíční historie – uhlí & cena</h2>
-  <canvas id="monthChart" style="max-height:300px;"></canvas>
-  <table>
-    <thead>
-      <tr>
-        <th>Měsíc</th>
-        <th>Spotřeba (kg)</th>
-        <th>Cena (Kč)</th>
-      </tr>
-    </thead>
-    <tbody id="monthHistoryTable"></tbody>
-  </table>
-</div>
-<div id="totalHistoryBox" class="card" style="margin-top:20px">
-  <h2>📊 Celková spotřeba – od začátku</h2>
-  <canvas id="totalChart" style="max-height:300px;"></canvas>
-  <div class="grid" style="margin-top:15px;">
-    <div><div class="sub">Kg celkem</div><div class="value blue" id="kgTotal">0 kg</div></div>
-    <div><div class="sub">Cena celkem</div><div class="value green" id="costTotal">0 Kč</div></div>
-    <div>
-      <button id="resetTotalBtn">♻️ Vynulovat celkovou spotřebu</button>
-    </div>
-  </div>
-</div>
-
-<br>
-
-<div class="card">
-<h2>⚙️ Nastavení</h2>
-<div class="settings">
-  <div>
-    <label>Kg uhlí / 10 min</label>
-    <input type="number" id="kg10min" step="0.1">
-  </div>
-  <div>
-    <label>Cena / kg</label>
-    <input type="number" id="priceKg" step="0.1">
-  </div>
+  <div><div class="sub">Hodina</div><div class="value orange" id="kgHour">0 kg</div></div>
+  <div><div class="sub">Dnes</div><div class="value green" id="kgDay">0 kg</div></div>
+  <div><div class="sub">Měsíc</div><div class="value blue" id="kgMonth">0 kg</div></div>
+  <div><div class="sub">Cena dnes</div><div class="value" id="costDay">0 Kč</div></div>
+  <div><div class="sub">Cena měsíc</div><div class="value" id="costMonth">0 Kč</div></div>
 </div>
 </div>
 
 <div id="footerLogo">
-  <img src="https://raw.githubusercontent.com/Lukianoo/fd25-dashboard/main/logo-elektroservis.png" alt="Logo Elektroservis">
+<img src="https://raw.githubusercontent.com/Lukianoo/fd25-dashboard/main/logo-elektroservis.png">
 </div>
 
 <script>
-const CHANNEL = 231269;
-const ENERGY = 4.8; // kWh / kg
-const EFF = 0.75;
+const CHANNEL=231269, ENERGY=4.8, EFF=0.75;
+kg10min.value=localStorage.kg10min||2.5;
+priceKg.value=localStorage.priceKg||6.2;
+let totalAllOffset=Number(localStorage.totalAllOffset||0);
 
-kg10min.value = localStorage.kg10min || 2.5;
-priceKg.value = localStorage.priceKg || 6.2;
+function secToKg(sec){return Math.max(0,(sec/600)*(+kg10min.value||2.5))}
+function secToHMS(s){s=Math.floor(s);return`${String(Math.floor(s/3600)).padStart(2,"0")}:${String(Math.floor(s%3600/60)).padStart(2,"0")}:${String(s%60).padStart(2,"0")}`}
+async function fetchFeeds(p){const r=await fetch(`https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`);return(r.ok?(await r.json()).feeds:[])||[]}
 
-let dayChartInstance = null;
-let monthChartInstance = null;
-let totalAllOffset = Number(localStorage.totalAllOffset || 0);
-  
-let totalChartInstance = null;
-let totalOffset = localStorage.totalOffset || 0; // pro vynulování
-
-function updateClock(){ clock.textContent = new Date().toLocaleString("cs-CZ"); }
-function secToHMS(sec){ sec=Math.max(0,Math.floor(sec));const h=Math.floor(sec/3600);const m=Math.floor((sec%3600)/60);const s=sec%60; return `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`; }
-function secToKg(sec){ return Math.max(0,(sec/600)*(+kg10min.value||2.5)); }
-function todayStartISO(){ const d=new Date();d.setHours(0,0,0,0);return d.toISOString(); }
-function monthStartISO(){ const d=new Date(); d.setDate(1); d.setHours(0,0,0,0); return d.toISOString(); }
-
-async function fetchFeeds(p){ try{ const r=await fetch(`https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`); return (await r.json()).feeds||[]; }catch(e){return[];} }
-
-async function updateCurrent(){
-  const cur=await fetchFeeds("results=1"); if(!cur.length)return; const f=cur[0];
-  const tK=+f.field5||0; const tZ=+f.field1||0;
-  tKotel.textContent=tK.toFixed(1)+" °C";
-  tZpet.textContent=tZ.toFixed(1)+" °C";
-  tPodavac.textContent=(+f.field2||0).toFixed(1)+" °C";
-  tBojler.textContent=(+f.field3||0).toFixed(1)+" °C";
-  tVenku.textContent=(+f.field4||0).toFixed(1)+" °C";
-  deltaT.textContent=(tK-tZ).toFixed(1)+" °C";
-  const totalSec=+f.field8||0; feedTotal.textContent=secToHMS(totalSec);
+async function updateTotalAll(){
+  const f=await fetchFeeds("results=3000"); if(f.length<2)return;
+  const sec=Math.max(0,(+f.at(-1).field8)-(+f[0].field8)-totalAllOffset);
+  const kg=secToKg(sec);
+  kgTotalAll.textContent=kg.toFixed(1)+" kg";
+  costTotalAll.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 }
 
-async function updateHour(){ const f=await fetchFeeds("minutes=60&results=120"); if(f.length<2)return; const kg=secToKg(f.at(-1).field8-f[0].field8); kgHour.textContent=kg.toFixed(2)+" kg"; powerKWbig.textContent=(kg*ENERGY*EFF).toFixed(1)+" kWh"; }
-async function updateDay(){ const f=await fetchFeeds("start="+todayStartISO()+"&results=2000"); if(f.length<2)return; const kg=secToKg(f.at(-1).field8-f[0].field8); kgDay.textContent=kg.toFixed(2)+" kg"; costDay.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč"; }
-async function updateMonth(){ const f=await fetchFeeds("start="+monthStartISO()+"&results=3000"); if(f.length<2)return; const kg=secToKg(f.at(-1).field8-f[0].field8); kgMonth.textContent=kg.toFixed(0)+" kg"; costMonth.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč"; }
-  async function updateTotalAll(){
-  const feeds = await fetchFeeds("results=3000");
-  if(feeds.length < 2) return;
-
-  const first = +feeds[0].field8 || 0;
-  const last  = +feeds.at(-1).field8 || 0;
-
-  const secTotal = Math.max(0, last - first - totalAllOffset);
-  const kg = secToKg(secTotal);
-  const cost = kg * (+priceKg.value || 6.2);
-
-  kgTotalAll.textContent = kg.toFixed(1) + " kg";
-  costTotalAll.textContent = cost.toFixed(0) + " Kč";
-}
-
-async function updateTotalHistory(){
-  const feeds = await fetchFeeds("results=3000"); // nejdelší možné
-  if(feeds.length<2) return;
-
-  const firstSec = +feeds[0].field8 || 0;
-  const lastSec = +feeds.at(-1).field8 || 0;
-
-  const totalSec = lastSec - firstSec - totalOffset;
-  const kg = secToKg(totalSec);
-  const cost = (kg * (+priceKg.value || 6.2)).toFixed(0);
-
-  kgTotal.textContent = kg.toFixed(1) + " kg";
-  costTotal.textContent = cost + " Kč";
-
-  const labels = feeds.map(f=>new Date(f.created_at).toLocaleDateString("cs-CZ"));
-  const dataKg = feeds.map(f => secToKg(+f.field8 - firstSec - totalOffset));
-
-  if(totalChartInstance) totalChartInstance.destroy();
-  const ctx = document.getElementById('totalChart').getContext('2d');
-  totalChartInstance = new Chart(ctx,{
-    type:'line',
-    data:{
-      labels: labels,
-      datasets:[{
-        label:'Kg celkem',
-        data:dataKg,
-        borderColor:'#1565c0',
-        backgroundColor:'rgba(21,101,192,0.2)',
-        fill:true,
-        tension:0.2,
-        pointRadius:2
-      }]
-    },
-    options:{
-      responsive:true,
-      plugins:{legend:{display:true}},
-      scales:{y:{beginAtZero:true}}
-    }
-  });
-}
-
-historyBtn.onclick = async () => {
-  historyBox.style.display = historyBox.style.display==="none"?"block":"none";
-
-  const labels=[]; const dataKg=[]; const price=+priceKg.value||6.2;
-  historyTable.innerHTML="";
-  for(let i=13;i>=0;i--){
-    const d1=new Date(); d1.setDate(d1.getDate()-i); d1.setHours(0,0,0,0);
-    const d2=new Date(d1); d2.setDate(d2.getDate()+1);
-    const feeds=await fetchFeeds(`start=${d1.toISOString()}&end=${d2.toISOString()}&results=2000`);
-    if(feeds.length>1){
-      const kg=secToKg(feeds.at(-1).field8 - feeds[0].field8);
-      const cost=(kg*price).toFixed(0);
-      historyTable.innerHTML+=`<tr><td>${d1.toLocaleDateString("cs-CZ",{day:"2-digit",month:"2-digit"})}</td><td>${kg.toFixed(1)}</td><td>${cost}</td></tr>`;
-      labels.push(d1.toLocaleDateString("cs-CZ",{day:"2-digit",month:"2-digit"}));
-      dataKg.push(Number(kg.toFixed(1)));
-    }
-  }
-  if(dayChartInstance) dayChartInstance.destroy();
-  const ctx=document.getElementById('dayChart').getContext('2d');
-  dayChartInstance=new Chart(ctx,{type:'bar',data:{labels:labels,datasets:[{label:'Spotřeba (kg)',data:dataKg,backgroundColor:'#1565c0'}]},options:{responsive:true,plugins:{legend:{display:true}},scales:{y:{beginAtZero:true}}}});
-};
-
-monthHistoryBtn.onclick = async () => {
-  monthHistoryBox.style.display = monthHistoryBox.style.display==="none"?"block":"none";
-
-  const labels=[]; const dataKg=[]; const price=+priceKg.value||6.2;
-  monthHistoryTable.innerHTML="";
-  for(let i=11;i>=0;i--){
-    const s=new Date(); s.setMonth(s.getMonth()-i,1); s.setHours(0,0,0,0);
-    const e=new Date(s.getFullYear(), s.getMonth()+1,1);
-    const feeds=await fetchFeeds(`start=${s.toISOString()}&end=${e.toISOString()}&results=4000`);
-    if(feeds.length>1){
-      const kg=secToKg(feeds.at(-1).field8 - feeds[0].field8);
-      const cost=(kg*price).toFixed(0);
-      monthHistoryTable.innerHTML+=`<tr><td>${s.toLocaleDateString("cs-CZ",{month:"short",year:"2-digit"})}</td><td>${kg.toFixed(0)}</td><td>${cost}</td></tr>`;
-      labels.push(s.toLocaleDateString("cs-CZ",{month:"short",year:"2-digit"}));
-      dataKg.push(Number(kg.toFixed(0)));
-    }
-    
-  }
-  if(monthChartInstance) monthChartInstance.destroy();
-  const ctx=document.getElementById('monthChart').getContext('2d');
-  monthChartInstance=new Chart(ctx,{type:'line',data:{labels:labels,datasets:[{label:'Spotřeba (kg)',data:dataKg,backgroundColor:'rgba(46,125,50,0.2)',borderColor:'#2e7d32',fill:true,tension:0.3,pointRadius:5} ]},options:{responsive:true,plugins:{legend:{display:true}},scales:{y:{beginAtZero:true}}}});
-  resetTotalAllBtn.onclick = async () => {
-  if(!confirm("Opravdu vynulovat celkovou spotřebu?")) return;
-
-  const feeds = await fetchFeeds("results=1");
-  if(!feeds.length) return;
-
-  const currentSec = +feeds[0].field8 || 0;
-  totalAllOffset = currentSec;
-  localStorage.totalAllOffset = totalAllOffset;
-
+resetTotalAllBtn.onclick=async()=>{
+  if(!confirm("Opravdu vynulovat?"))return;
+  const f=await fetchFeeds("results=1"); if(!f.length)return;
+  totalAllOffset=+f[0].field8||0;
+  localStorage.totalAllOffset=totalAllOffset;
   updateTotalAll();
-};
+}
 
-};
-resetTotalBtn.onclick = () => {
-  if(confirm("Opravdu chcete vynulovat celkovou spotřebu?")){
-    const feeds = totalChartInstance.data.datasets[0].data;
-    if(feeds.length > 0){
-      totalOffset += feeds[0];          // posune offset o aktuální první hodnotu
-      localStorage.totalOffset = totalOffset;  // uloží do localStorage
-      updateTotalHistory();             // aktualizuje graf a hodnoty
-    }
-  }
-};
-
-kg10min.oninput=()=>{ localStorage.kg10min=kg10min.value; updateHour(); updateDay(); updateMonth();updateTotalHistory();updateTotalAll();
-
- }
-priceKg.oninput=()=>{ localStorage.priceKg=priceKg.value; updateDay(); updateMonth();updateTotalHistory();updateTotalAll();
-
- }
-
-fsBtn.onclick=()=>{ if(!document.fullscreenElement){ document.documentElement.requestFullscreen(); fsBtn.textContent="⛶×"; } else{ document.exitFullscreen(); fsBtn.textContent="⛶"; } }
-
-updateClock(); updateCurrent(); updateHour(); updateDay(); updateMonth();updateTotalHistory();
-
-setInterval(updateClock,1000);
-setInterval(updateCurrent,30000);
-setInterval(updateHour,300000);
-setInterval(updateDay,900000);
-setInterval(updateMonth,1800000);
-  updateTotalAll();
-
+fsBtn.onclick=()=>document.fullscreenElement?document.exitFullscreen():document.documentElement.requestFullscreen();
+setInterval(()=>clock.textContent=new Date().toLocaleString("cs-CZ"),1000);
+updateTotalAll();
 </script>
 
 </body>
