--- a/index.html
+++ b/index.html
@@ -285,6 +285,13 @@ setInterval(updateHour,300000);
 setInterval(updateDay,900000);
 setInterval(updateMonth,1800000);
 </script>
+<footer style="text-align:center;margin:40px 0 20px;opacity:.85">
+  <img 
+    src="https://raw.githubusercontent.com/Lukianoo/fd25-dashboard/main/logo-elektroservis.png"
+    alt="Elektroservis logo"
+    style="max-width:220px;width:100%;filter:drop-shadow(0 4px 8px rgba(0,0,0,.4))"
+  >
+</footer>
 
 </body>
 </html>
