--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@ button{
 table{width:100%;border-collapse:collapse}
 th,td{padding:8px;text-align:center}
 th{background:#eee}
+  footer img{
+  transition: .3s;
+}
+
+footer img:hover{
+  transform: scale(1.03);
+  opacity: 1;
+}
+
 </style>
 </head>
 
