--- a/index.html
+++ b/index.html
@@ -144,6 +144,19 @@ footer img:hover{
     <tbody id="historyTable"></tbody>
   </table>
 </div>
+<div id="monthHistoryBox" class="card" style="display:none;margin-top:20px">
+  <h2>📆 Měsíční historie – uhlí & cena</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Měsíc</th>
+        <th>Spotřeba (kg)</th>
+        <th>Cena (Kč)</th>
+      </tr>
+    </thead>
+    <tbody id="monthHistoryTable"></tbody>
+  </table>
+</div>
 
 <div id="totalHistoryBox" class="card" style="display:none;margin-top:20px">
   <h2>📈 Celková historie – od začátku měření</h2>
