--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@ button{
   margin-bottom:10px; /* mezera mezi tlačítky */
   box-sizing:border-box;
 }
+  /* barvy tlačítek historie */
+#historyBtn { background-color: #ef6c00; color: #fff; }
+#monthHistoryBtn { background-color: #1565c0; color: #fff; }
+#totalHistoryBtn { background-color: #2e7d32; color: #fff; }
+#historyBtn:hover,
+#monthHistoryBtn:hover,
+#totalHistoryBtn:hover { opacity: 0.85; }
 table{width:100%;border-collapse:collapse}
 th,td{padding:8px;text-align:center}
 th{background:#eee}
