--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ footer img:hover{
   <div class="card"><h2>🔥 Kotel</h2><div class="value" id="tKotel">--</div></div>
   <div class="card"><h2>↩️ Zpátečka</h2><div class="value blue" id="tZpet">--</div></div>
   <div class="card"><h2>🌡️ Teplotní spád ΔT</h2><div class="value orange" id="deltaT">--</div></div>
-  <div class="card"><h2>⚡ Aktuální výkon kotle (1 h)</h2><div class="value green" id="powerKWbig">--</div></div>
+  <div class="card"><h2>⚡ Aktuální výkon</h2><div class="value green" id="powerKWbig">--</div></div>
   <div class="card"><h2>⚙️ Podavač</h2><div class="value" id="tPodavac">--</div></div>
   <div class="card"><h2>💧 Bojler</h2><div class="value" id="tBojler">--</div></div>
   <div class="card"><h2>🌡️ Venku</h2><div class="value" id="tVenku">--</div></div>
