--- a/index.html
+++ b/index.html
@@ -100,18 +100,13 @@ footer img:hover{
 
 <body>
 
-<header style="display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#000;color:#fff;flex-wrap:wrap;">
-
-  <!-- levý spacer / hodiny (nebo prázdné, pokud chceš hodiny jinde) -->
-  <div id="clock" style="font-size:25px;"></div>
-
-  <!-- logo + název doprostřed -->
-  <div style="display:flex;align-items:center;gap:10px;flex:1;justify-content:center;">
-    <img src="https://raw.githubusercontent.com/Lukianoo/fd25-dashboard/main/logo-elektroservis.png"
-         alt="Elektroservis logo"
-         style="max-width:200px;width:100%;">
-    <span style="font-size:25px;font-weight:700;">Attack FD 25 AUTOMAT – PANEL KOTELNY</span>
+<header style="display:flex;justify-content:center;padding:10px 0;">
+  <div style="display:flex;align-items:center;gap:15px;">
+    <img src="..." style="width:80px;height:auto;">
+    <span style="font-size:22px;font-weight:700;color:#fff;">Attack FD 25 AUTOMAT – PANEL KOTELNY</span>
+    <button id="fullscreenBtn" style="padding:6px 12px;font-size:14px;border-radius:8px;background:#6a1b9a;color:#fff;border:none;cursor:pointer;">⛶ Fullscreen</button>
   </div>
+</header>
 
   <!-- fullscreen tlačítko napravo -->
   <div>
