--- a/index.html
+++ b/index.html
@@ -101,11 +101,17 @@ footer img:hover{
 <body>
 
 <header style="display:flex;justify-content:center;padding:10px 0;">
-  <div style="display:flex;align-items:center;gap:15px;">
-    <img src="..." style="width:80px;height:auto;">
-    <span style="font-size:22px;font-weight:700;color:#fff;">Attack FD 25 AUTOMAT – PANEL KOTELNY</span>
-    <button id="fullscreenBtn" style="padding:6px 12px;font-size:14px;border-radius:8px;background:#6a1b9a;color:#fff;border:none;cursor:pointer;">⛶ Fullscreen</button>
+
+  <div style="display:flex;align-items:center;gap:15px;background:#000;color:#fff;padding:10px 20px;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,0.3);">
+    <img src="https://raw.githubusercontent.com/Lukianoo/fd25-dashboard/main/logo-elektroservis.png"
+         alt="Elektroservis logo"
+         style="width:80px;height:auto;">
+    <span style="font-size:22px;font-weight:700;">Attack FD 25 AUTOMAT – PANEL KOTELNY</span>
+    <button id="fullscreenBtn" style="padding:6px 12px;font-size:14px;border-radius:8px;background:#6a1b9a;color:#fff;border:none;cursor:pointer;">
+      ⛶ Fullscreen
+    </button>
   </div>
+
 </header>
 
   <!-- fullscreen tlačítko napravo -->
