--- a/index.html
+++ b/index.html
@@ -100,19 +100,14 @@ footer img:hover{
 
 <body>
 
-<header style="display:flex;justify-content:center;padding:10px 0;">
+<header style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;padding:15px 20px;background:#000;color:#fff;">
+  <!-- hodiny vlevo -->
+  <div id="clock" style="font-size:25px;"></div>
 
-  <div style="display:flex;align-items:center;gap:15px;background:#000;color:#fff;padding:10px 20px;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,0.3);">
-    <img src="https://raw.githubusercontent.com/Lukianoo/fd25-dashboard/main/logo-elektroservis.png"
-         alt="Elektroservis logo"
-         style="width:80px;height:auto;">
-    <span style="font-size:22px;font-weight:700;">Attack FD 25 AUTOMAT – PANEL KOTELNY</span>
-    <button id="fullscreenBtn" style="padding:6px 12px;font-size:14px;border-radius:8px;background:#6a1b9a;color:#fff;border:none;cursor:pointer;">
-      ⛶ Fullscreen
-    </button>
+  <!-- název doprostřed -->
+  <div style="flex:1;text-align:center;font-size:25px;font-weight:700;">
+    Attack FD 25 AUTOMAT – PANEL KOTELNY
   </div>
-
-</header>
 
   <!-- fullscreen tlačítko napravo -->
   <div>
@@ -120,7 +115,6 @@ footer img:hover{
       ⛶ Fullscreen
     </button>
   </div>
-
 </header>
 
 <main>
