--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body{
   margin:0;
   font-family:Segoe UI,system-ui;
-  background:linear-gradient(135deg,#1e3c72,#2a5298);
+  background:linear-gradient(135deg,#1e3c72,#076360);
   color:#222;
 }
 header{
