Update background gradient and header title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body{
   margin:0;
   font-family:Segoe UI,system-ui;
-  background:linear-gradient(135deg,#1e3c72,#076360);
+  background:linear-gradient(135deg,#0db8b2,#076360);
   color:#222;
 }
 header{
@@ -106,7 +106,7 @@ footer img:hover{
 
   <!-- název doprostřed -->
   <div style="flex:1;text-align:center;font-size:25px;font-weight:700;">
-    Attack FD 25 AUTOMAT – PANEL KOTELNY
+    ATTACK FD 25 AUTOMAT – PANEL KOTELNY ZACHRČ
   </div>
 
   <!-- fullscreen tlačítko napravo -->
